--- a/WorkShop5/Diseno.css
+++ b/WorkShop5/Diseno.css
@@ -12,7 +12,7 @@
     border: 0px;
     border-radius: 12px; /*Redondear bordes*/
     color: var(--blanco);
-    margin-left: 300px;
+    margin-left: 250px;
     padding: 5px 10px 5px 10px;
     font-weight: 600;
 }
@@ -49,7 +49,7 @@ body {
     display: flex;
     justify-content: center;
     text-align: center;
-    background-image: url(fondo1.jpg);
+    background-image: url(fondito.jpeg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -77,7 +77,7 @@ body {
 .img1  {
     width: 300px;
     float:right;
-    margin: 150px 100px 0 0;
+    margin: 400px 100px 0 0;
 }
 
 
@@ -125,7 +125,7 @@ h2, h3, p {
 .posicion2 {
     justify-content: center;
     text-align: center;
-    background-image: url(fondo1.jpg);
+    background-image: url(fondito.jpeg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
